# django-d3-indicator-viz

./: MANIFEST.in  README.md  README.rst  pyproject.toml
django_d3_indicator_viz/: admin.py  apps.py  indicator_value_aggregator.py  models.py  serializers.py  urls.py  views.py
django_d3_indicator_viz/migrations/: 0001_initial.py  0002_colorscale_and_more.py  0003_category_share_axes_indicatorvalue_active_data.py  0004_remove_indicatordatavisual_source_and_more.py
django_d3_indicator_viz/static/: ban.js  chart-connector.js  chartloader.js  columnchart.js  datatable.js  donutchart.js  example_data.js  linechart.js  minmedmaxchart.js  multilinechart.js  sectionloader.js  utils.js  visuals.js
django_d3_indicator_viz/templates/: demo.html
django_d3_indicator_viz/templates/django_d3_indicator_viz/: chart_roll.html  example_use.html  profile.html  section.html
django_d3_indicator_viz/templatetags/: madlibs.py
django_d3_indicator_viz/tests/: test_category_axis_scale.py  test_indicator_value_aggregator.py  test_templatetags.py
