[build-system]
requires = ["setuptools>=69.3"]
build-backend = "setuptools.build_meta"

[project]
name = "django-d3-indicator-viz"
version = "0.5.0"
dependencies = [
    "django>=5.2.3",
]
description = "A Django app for scaffolding models for categorized and filterable indicator data, and visualizing that data in a variety of formats using the Apache ECharts library."
readme = "README.rst"
requires-python = ">= 3.10"
authors = [
    {name = "Brian Herron", email = "herronrb@gvsu.edu"},
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2.3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.urls]
Homepage = "https://github.com/data-driven-detroit/django-d3-indicator-viz"